Revision history for Dinotrace

The contributors that suggested a given feature are shown in [].

* Dinotrace 9.4a 2009/04/03

**	Dinotrace is now distributed under GPL v3 (previously GPL 2).

****	Fix Emacs 22 warnings on dinotrace.el/sim-log.el.  [Chitlesh Goorah]

****	Fix core dump on start on Fedora, fedora478749. [Manuel Wolfshant]

* Dinotrace 9.3f 2008/02/19

****	Fix signal radix being lost when trace is reread.  [Uwe Bonnes]

****	Fix core dump when verilog trace has single timestamp.  [Uwe Bonnes]

* Dinotrace 9.3e 2007/02/27

****	Add DESTDIR "make install" rule for RPMs.  [Werner Hoch]

* Dinotrace 9.3d 2007/02/27

****	Fix "make uninstall" deleting data area (Sorry!!!).  [Dinesh]

* Dinotrace 9.3c 2007/01/02

***	Add signed decimal radix.  [by Uwe Bonnes]

***	Builds now take place in "obj_dir" to keep them distinct from sources.

****	Fix VCD files with 10 or 100 femtosecond resolution.

****	Fix dinotrace.el complaint about bad verilog-mode.el version.
	[Joseph Holtgrefe]

****	Fix core dump when no fonts are available.  [Dmitri Belimov]

* Dinotrace 9.3b 2006/03/13

***	Fix line number incrementing in Verilog errors. [Uwe Bonnes]

* Dinotrace 9.3a 2005/06/13

***	Fix too small buttons under openmotif.

***	Fix missing keyboard accelerators under openmotif.

* Dinotrace 9.2b 2005/05/03

***	The default extension for Verilog dumps is now .vcd instead of .dmp.

****    Fix traces containing only real numbers.  [Vitor Antunes]

****	Fix segfault when doing signal adds.  [Guy Hutchinson]

* Dinotrace 9.2a 2004/12/20

**      NEWS file is now renamed Changes.

**	Added signal note and cursor note menu items.  [Shane Coffman]

**	Searching for a non-vector signal will now return a vectored signal.
	For example a pattern "Foo" will find "Foo[1:0]."  [Shane Coffman]

****	Save cursor notes in Customize save files.  [Thomas Dmukauskas]

****	Fix compilation errors on GCC 3.4.  [Jaroslaw Gorny]
